views/appledoc_stylesheet.scss
@import "vars";

html.dash, html.xcode {

  #has_index, header#app_header, #overview_contents {
    min-width:0;
  }

  #has_index #container {
    float:none;
  }

  .hideInXcode {
    display:none;
  }

  #object #contents {
    margin-top:0;
  }

  .has_index #overview_contents {

    min-width: 800px;
    width:800px;
    margin: 32px auto;
  }

  #overview_contents #sidebar {
    display:block;
  }

  #sidebar {
      float:none;

      .index-column {
          width: 728px;
          padding: 30px;
          padding-top: 2px;
          margin:0;
          margin-top: 44px;

          ul:after {
            content: "";
            display: table;
            clear: both;
          }

          li {
            min-width: 180px;
            padding:4px 10px;
            float: left;
          }
      }
  }
}

html.dash {

  #overview_contents {
    background-color: $background-color;
  }

  .index-overview {
    margin-top: 0;
    padding-top:20px;
  }

  body {
    background-color: white;
  }

  /* Move the padding to the outer div to increase the clickable area: */
  .method-declaration code {
      padding: 0px;
  }

  .method-subsection {
      padding: 10px 28px 10px 10px;
  }

  /* Restore pointer events so that user is able to select text: */
  html.dash .method-declaration code {
     /* Remove the pointer-events: none */
  }

  /* This reduces the clickable area of the text and increases the click-to-copy area. Text selection only works inside the text and everywhere else it's click-to-copy */
  .method-declaration code {
      display: inline;
  }


  article {
    width:auto;
    margin:0;
    min-width: auto;
  }

  .section {
    margin-left: 0px;
    margin-right: 0px;
    border-top:none;
  }

  #contents {
    width:auto;
    float:none;
    padding-top:32px;
  }


}

article, header > div {
  width:1080px;
  padding:0;
  margin:0 auto;

}

body {
  font-family: $body;
  font-size: 14px;
  line-height: 20px;
  background-color:$background-color;
  padding:0;
  margin:0;
}

pre {
  max-width: 100%;
  overflow: scroll;
}

h1,h2,h3,h4,h5 {
  font-weight:normal;
}

h1, h2, h3  {
  color: $highlight-color;
  margin-bottom:0.5em;
  word-wrap:break-word;
}

h4, h5, h6 {
  text-transform: uppercase;
  color: #290002;
  margin-bottom:0.5em;

}

h1 {
  border-left: 4px $highlight-color solid;
  padding-left:12px;
  font-size: 36px;
  line-height: 42px;
}

h2 {
  font-size: 36px;
  line-height: 46px;
}

h3 {
  color: $highlight-dark-color;
  font-size: 24px;
  line-height: 30px;
}

h4 {
  font-size: 24px;
  line-height: 32px;
}

h5 {
  font-size: 18px;
  line-height: 24px;
}

h6 {
  font-size: 14px;
  line-height: 19px;
}

ul {
  list-style-type: square;
}

li {
  margin-bottom: 10px;
}

a {
  text-decoration: none;
  color: $highlight-color;

  code {
    text-decoration: none;
    color: $alt-link-color;
  }

  &:hover {
    text-decoration: underline;
    color: $highlight-dark-color;

    code {
      text-decoration: underline;
      color: #a97322;
    }
  }
}


.index-overview {
  background-color: white;
  width: 728px;
  padding: 30px;
  padding-top:2px;
  margin-top:44px;
}

table {
  margin-bottom: 4em;
  border-collapse: collapse;
  vertical-align: middle;
}

td {
  border: 1px solid $highlight-dark-color;
  padding: .667em;
  font-size: 100%;
}

th {
  border: 1px solid $highlight-dark-color;
  padding: .3em .667em .3em .667em;
  background: $highlight-dark-color;
  font-size: 103%;
  font-weight: bold;
  color: white;
  text-align: left;
}

/* @group Common page elements */

#footer {
  clear: both;
  padding-top: 20px;
  text-align: center;

  p {
    width:100%;
    max-width:100% !important;
  }
}

.copyright {
  font-size: 12px;
}

.generator {
  font-size: 11px;
}

.main-navigation ul li {
  display: inline;
  margin-left: 15px;
  list-style: none;
}

.navigation-top {
  position:absolute;
  top:8px;
  right:8px;

  ul {
    margin:0;
  }
}

.navigation-bottom {
  clear: both;
  float: right;
  margin-top: 20px;
  margin-bottom: -10px;
}

.open > .disclosure {
  &:after {
      content: "\25BC";
  }
}

.disclosure {
  &:after {
      content: "\25BA";
  }
}

li.children:hover  {
    .nodisclosure, .disclosure {
      opacity:0.3;
    }
}

.nodisclosure, .disclosure {
  color: $highlight-color;
  margin-right: 8px;
  width: 9px;
  font-size:10px;
  line-height: 16px;
  vertical-align: text-bottom;
}

/* @end */

/* @group Header */

header#app_header.minimised {
  top:0px;
  bottom:auto;

  > div {
    -webkit-transition:height 0.2s;
    height: 20px + (20px*2) ;

    ul#subtitle {
        z-index:1000;
    }

    // Ergh, such a hack
    div#cover {
      background-color: white;
      width: 100%;
      display: block;
      position: absolute;
      top: 0;
      height: 108px;
      padding: 0;
      margin-left:-20px;
      z-index:1001;
    }

    > li a {
      -webkit-transition:opacity 0.3s;
      opacity:0;
    }

    &:hover {
      height: 60px + (20px*2) ;

      ul#subtitle {
        height:auto;
        -webkit-transition:height 0.2s;

        li a {
          -webkit-transition:opacity 0.3s;
          opacity:1;
        }
      };

      > div {
        height:160px - 28px * 2;
      }
    }
  }

    h1 {
      top:0px;
      padding-top:0px;
      font-size:48px;
      text-align:center;
      width: 940px;
      text-overflow: ellipsis;
      overflow:hidden;
      left: 114px;
      right:64px;
      z-index:1002;
      display:block;
      height: 62px;
      margin-top:22px;
    }

    em {
      font-size:32px;
    }

    div#header_actions {
      z-index:1002;
    }

    a#logo {
      width:80px;
      height:65px;
      z-index:1002;
    }
}
/* ... */

